30058-01-070201 changes to power/current cal

--- a/iRIS_CLM_GUI_TEST_01/Properties/Settings.settings
+++ b/iRIS_CLM_GUI_TEST_01/Properties/Settings.settings
@@ -11,5 +11,8 @@
     <Setting Name="DefaultUser" Type="System.String" Scope="User">
       <Value Profile="(Default)">GM</Value>
     </Setting>
+    <Setting Name="WOrder" Type="System.String" Scope="User">
+      <Value Profile="(Default)">99887766</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
