--- a/iRIS_CLM_GUI_TEST_01/app.config
+++ b/iRIS_CLM_GUI_TEST_01/app.config
@@ -17,6 +17,9 @@
             <setting name="DefaultUser" serializeAs="String">
                 <value>GM</value>
             </setting>
+            <setting name="WOrder" serializeAs="String">
+                <value>99887766</value>
+            </setting>
         </iRIS_CLM_GUI_TEST_01.Properties.Settings>
     </userSettings>
 </configuration>
