--- a/iRIS_CLM_GUI_TEST_01/app.config
+++ b/iRIS_CLM_GUI_TEST_01/app.config
@@ -9,7 +9,7 @@
     <userSettings>
         <iRIS_CLM_GUI_TEST_01.Properties.Settings>
             <setting name="RootFolder" serializeAs="String">
-                <value>P:\</value>
+                <value>\\officeserver\Production Test Data\iFLEX IRIS Test Data</value>
             </setting>
             <setting name="PM100string" serializeAs="String">
                 <value>USB0::0x1313::0x8072::P2008742::0::INSTR</value>
@@ -18,7 +18,7 @@
                 <value>GM</value>
             </setting>
             <setting name="WOrder" serializeAs="String">
-                <value>99887766</value>
+                <value>IPO1230000</value>
             </setting>
         </iRIS_CLM_GUI_TEST_01.Properties.Settings>
     </userSettings>
