--- a/iRIS_CLM_GUI_TEST_01/app.config
+++ b/iRIS_CLM_GUI_TEST_01/app.config
@@ -1,13 +1,12 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-<configSections>
-    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-        <section name="iRIS_CLM_GUI_TEST_01.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
-    </sectionGroup>
-</configSections>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6"/></startup>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="iRIS_CLM_GUI_TEST_02.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <userSettings>
-        <iRIS_CLM_GUI_TEST_01.Properties.Settings>
+        <iRIS_CLM_GUI_TEST_02.Properties.Settings>
             <setting name="RootFolder" serializeAs="String">
                 <value>\\officeserver\Production Test Data\iFLEX IRIS Test Data</value>
             </setting>
@@ -20,6 +19,24 @@
             <setting name="WOrder" serializeAs="String">
                 <value>IPO1230000</value>
             </setting>
-        </iRIS_CLM_GUI_TEST_01.Properties.Settings>
+            <setting name="TableResults" serializeAs="String">
+                <value>iFLEX_iRIS_Setup_Results</value>
+            </setting>
+            <setting name="TableLoad" serializeAs="String">
+                <value>Laser_Setup_Config</value>
+            </setting>
+            <setting name="Server" serializeAs="String">
+                <value>ETCMUCD02</value>
+            </setting>
+            <setting name="Database01" serializeAs="String">
+                <value>QPL Production</value>
+            </setting>
+            <setting name="DbUser" serializeAs="String">
+                <value>HambleDBUser</value>
+            </setting>
+            <setting name="DbPw" serializeAs="String">
+                <value>H@mbleDB!</value>
+            </setting>
+        </iRIS_CLM_GUI_TEST_02.Properties.Settings>
     </userSettings>
 </configuration>
