30-058-04.01 070601 EQ added to table

--- a/iRIS_CLM_GUI_TEST_01/app.config
+++ b/iRIS_CLM_GUI_TEST_01/app.config
@@ -37,6 +37,9 @@
             <setting name="DbPw" serializeAs="String">
                 <value>H@mbleDB!</value>
             </setting>
+            <setting name="TestEqNb" serializeAs="String">
+                <value>EQ889955</value>
+            </setting>
         </iRIS_CLM_GUI_TEST_04.Properties.Settings>
     </userSettings>
 </configuration>
