--- a/iRIS_CLM_GUI_TEST_01/Properties/Settings.settings
+++ b/iRIS_CLM_GUI_TEST_01/Properties/Settings.settings
@@ -32,5 +32,8 @@
     <Setting Name="DbPw" Type="System.String" Scope="User">
       <Value Profile="(Default)">H@mbleDB!</Value>
     </Setting>
+    <Setting Name="TestEqNb" Type="System.String" Scope="User">
+      <Value Profile="(Default)">EQ889955</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
